[gd_scene load_steps=7 format=3 uid="uid://dy25pvs37m84w"]

[ext_resource type="PackedScene" uid="uid://da0054l6vw7u0" path="res://Scenes/GameMainScreenScenes/FishingScenes/fishing_game.tscn" id="1_1im5g"]
[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/fishing_screen.gd" id="1_nm6k8"]
[ext_resource type="PackedScene" uid="uid://bijsbcpjdhp2w" path="res://Scenes/GameMainScreenScenes/FishingScenes/bait_selection.tscn" id="3_ck0vw"]
[ext_resource type="PackedScene" uid="uid://45ggwxc6rcjg" path="res://Scenes/GameMainScreenScenes/FishingScenes/fish_page.tscn" id="3_o2ikf"]
[ext_resource type="PackedScene" uid="uid://chithml6pwn6b" path="res://Scenes/GameMainScreenScenes/FishingScenes/bait_page.tscn" id="5_dqra7"]
[ext_resource type="PackedScene" uid="uid://udocobmm6xuq" path="res://Scenes/GameMainScreenScenes/FishingScenes/fishing_spots_page.tscn" id="6_yccsx"]

[node name="FishingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nm6k8")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="MC"]
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="MC/HBox"]
custom_minimum_size = Vector2(1060, 0)
layout_mode = 2
mouse_filter = 2

[node name="MC" type="MarginContainer" parent="MC/HBox/VBox"]
custom_minimum_size = Vector2(700, 820)
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="FishingGame" parent="MC/HBox/VBox/MC" instance=ExtResource("1_1im5g")]
layout_mode = 2

[node name="MC2" type="MarginContainer" parent="MC/HBox/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="BaitSelection" parent="MC/HBox" instance=ExtResource("3_ck0vw")]
layout_mode = 2

[node name="FishingImprovementsMenusHBox" type="MarginContainer" parent="MC/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 25

[node name="ColorRect" type="ColorRect" parent="MC/HBox/FishingImprovementsMenusHBox"]
layout_mode = 2
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="VBox" type="VBoxContainer" parent="MC/HBox/FishingImprovementsMenusHBox"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="MC/HBox/FishingImprovementsMenusHBox/VBox"]
custom_minimum_size = Vector2(570, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ColorRect" type="ColorRect" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC"]
layout_mode = 2
color = Color(0.305882, 0.321569, 0.392157, 1)

[node name="HBox" type="HBoxContainer" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17
alignment = 1

[node name="MC" type="MarginContainer" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="FishButton" type="Button" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Fish"

[node name="MC3" type="MarginContainer" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="BaitButton" type="Button" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox/MC3"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Bait"

[node name="MC2" type="MarginContainer" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="SpotButton" type="Button" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox/MC2"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Spots"

[node name="PagesMC" type="MarginContainer" parent="MC/HBox/FishingImprovementsMenusHBox/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="FishPage" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/PagesMC" groups=["FishPage"] instance=ExtResource("3_o2ikf")]
visible = false
layout_mode = 2

[node name="BaitPage" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/PagesMC" instance=ExtResource("5_dqra7")]
visible = false
layout_mode = 2

[node name="FishingSpotsPage" parent="MC/HBox/FishingImprovementsMenusHBox/VBox/PagesMC" instance=ExtResource("6_yccsx")]
layout_mode = 2

[connection signal="button_down" from="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox/MC/FishButton" to="." method="_on_fish_button_button_down"]
[connection signal="button_down" from="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox/MC3/BaitButton" to="." method="_on_bait_button_button_down"]
[connection signal="button_down" from="MC/HBox/FishingImprovementsMenusHBox/VBox/MC/ColorRect/HBox/MC2/SpotButton" to="." method="_on_spot_button_button_down"]
